translation-tool/inputs/source_meta/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Add_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_EmailTo__c</fullName>
        <label>Email To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Internal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used in Interaction Log and in Task(R2)</description>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_EventOwner__c</fullName>
        <label>Event Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HughesSvc_ParentCaseNumber__c</fullName>
        <description>This fields is used to capture the parent case number.</description>
        <label>Parent Case Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>